--- a/src/styles/header.modulemin.css
+++ b/src/styles/header.modulemin.css
@@ -1,1 +1,1 @@
-.header{width:90%;text-align:center;margin:80px auto 0 auto}
+.header{text-align:center;margin:90px auto 60px auto}.header h1{font-size:1.7em;line-height:1.4em;margin-bottom:1em;text-wrap:balance}.header p{line-height:1.5em}
