--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,5 +1,7 @@
 $bg_primary_red:hsl(0,100%,74%);
 $c_primary_green:hsl(154, 59%, 51%);
+$c_primary_green_shadow:hsl(154, 59%, 40%);
+$c_primary_green_active:hsl(154, 59%, 70%);
 $c_accent_blue:  hsl(248, 32%, 49%);
 $c_neutral_darkblue: hsla(249, 10%, 26%, 0.3) ;
 $c_neutral_greyishblue:hsl(246, 25%, 77%);
