--- a/src/components/Signup/Header/header.module.scss
+++ b/src/components/Signup/Header/header.module.scss
@@ -1,6 +1,6 @@
 .header{
     text-align: center;
-    margin:90px auto 60px auto;
+    margin:0 auto 60px auto;
 
     h1{
         font-size:1.7em;
@@ -10,5 +10,24 @@
     }
     p{
         line-height:1.5em;
+    }
+}
+
+
+@media (min-width:768px) {
+    .header{
+        text-align:start;
+        width:100%;
+        margin:0;
+        h1{
+            line-height: 1.2em;
+            font-size:2.5em;
+        }
+    }
+}
+
+@media (min-width:1024px){
+    h1{
+        font-size:3em;
     }
 }
