--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -13,7 +13,7 @@ body{
 .sign_up_component{
     max-width:375px;
     margin:auto;
-    padding:0 1.5em;
+    padding:90px 1.5em;
 
     &_body{
         background:transparent;
@@ -21,8 +21,19 @@ body{
 }
 
 @media (min-width:768px) {
+    body{
+        background-image:url(../../images/bg-intro-desktop.png);
+
+    }
     .sign_up_component{
         display:flex;
-        max-width:1000px;
+        align-items: center;
+        gap:10px;
+        padding-top:120px;
+        max-width:1200px;
+
+        &_body{
+            width:80%;
+        }
     }
 }
