--- a/src/styles/header.modulemin.css
+++ b/src/styles/header.modulemin.css
@@ -1,1 +1,1 @@
-.header{text-align:center;margin:90px auto 60px auto}.header h1{font-size:1.7em;line-height:1.4em;margin-bottom:1em;text-wrap:balance}.header p{line-height:1.5em}
+.header{text-align:center;margin:0 auto 60px auto}.header h1{font-size:1.7em;line-height:1.4em;margin-bottom:1em;text-wrap:balance}.header p{line-height:1.5em}@media(min-width: 768px){.header{text-align:start;width:100%;margin:0}.header h1{line-height:1.2em;font-size:2.5em}}@media(min-width: 1024px){h1{font-size:3em}}
