--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -20,6 +20,24 @@ body{
     }
 }
 
+/* For webkit browsers (Chrome, Safari) */
+input[type="password"]::-webkit-textfield-decoration-container {
+    display: none;
+  }
+  
+  /* For Firefox */
+  input[type="password"]::-moz-password-strength-meter {
+    display: none;
+  }
+  
+  /* For Edge and IE */
+  input[type="password"]::-ms-reveal,
+  input[type="password"]::-ms-clear {
+    display: none;
+  }
+  
+
+  
 @media (min-width:768px) {
     body{
         background-image:url(../../images/bg-intro-desktop.png);
